--- a/index.html
+++ b/index.html
@@ -444,19 +444,19 @@
                                     </div>
                                     <ul class="footer-widget__services-list list-unstyled">
                                         <li>
-                                            <a href="speedy-dispatch.html"><span class="icon-angle-left"></span>Home</a>
+                                            <a href="#hero"><span class="icon-angle-left"></span>Home</a>
                                         </li>
                                         <li>
-                                            <a href="speedy-dispatch.html"><span class="icon-angle-left"></span>Quem Somos</a>
+                                            <a href="#about"><span class="icon-angle-left"></span>Quem Somos</a>
                                         </li>
                                         <li>
-                                            <a href="swift-supply-chain.html"><span class="icon-angle-left"></span>Soluções</a>
+                                            <a href="#services"><span class="icon-angle-left"></span>Soluções</a>
                                         </li>
                                         <li>
-                                            <a href="express-freight-solutions.html"><span class="icon-angle-left"></span>Diferenciais</a>
+                                            <a href="#"><span class="icon-angle-left"></span>Diferenciais</a>
                                         </li>
                                         <li>
-                                            <a href="swift-supply-chain.html"><span class="icon-angle-left"></span>Contato</a>
+                                            <a href="#contact"><span class="icon-angle-left"></span>Contato</a>
                                         </li>
                                     </ul>
                                 </div>
