--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>STARTLOG TRANSPORTES - Transporte Aéreo e Logística Completa</title>
-    <meta name="description" content="Transporte aéreo com logística completa. Mais de 15 anos de experiência em soluções de transporte de cargas.">
+    <meta name="description" content="Transporte aéreo com logística completa. Mais de 10 anos de experiência em soluções de transporte de cargas.">
     
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@flaticon/flaticon-uicons@3.3.1/css/all/all.min.css">
@@ -79,7 +79,6 @@
                     <h2>Seu Parceiro Estratégico em Transporte de Carga</h2>
                     <p>Com mais de 10 anos de atuação no mercado, a STARTLOG TRANSPORTES se consolidou como referência em transporte aéreo e soluções logísticas completas. Nossa equipe especializada e certificada pela ANAC garante que cada operação seja executada com máxima eficiência e segurança.</p>
                     <p>Oferecemos soluções personalizadas que atendem às necessidades específicas de cada cliente, combinando rapidez, confiabilidade e transparência em todos os processos.</p>
-                    <a href="#contato" class="btn btn-secondary">Saiba Mais</a>
                 </div>
                 <div class="about-images fade-in">
                     <div class="about-img-main">
@@ -127,7 +126,6 @@
                         <p>Confiança, compromisso com o cliente e garantia de qualidade em todas as operações que realizamos.</p>
                         </div>
                     </div>
-
                 </div>
             </div>
         </div>
@@ -248,9 +246,6 @@
                     <img src="assets/images/resources/excellence-img.jpg" alt="Operações Aéreas">
                 </div>
             </div>
-            <a href="https://wa.me/5511998032110" class="btn btn-primary" target="_blank">
-                <i class="fab fa-whatsapp"></i> Entre em Contato
-            </a>
         </div>
     </section>
 
@@ -324,7 +319,7 @@
                             <textarea id="message" name="message" rows="5" placeholder="Mensagem" required></textarea>
                         </div>
 
-                        <button type="submit" class="btn btn-primary btn-block">Enviar Agora</button>
+                        <button type="submit" class="btn btn-primary">Enviar Agora</button>
                     </form>
                 </div>
             </div>
