--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
                            <h2>Área de Cobertura</h2>
                            <p>Atuamos em todo o território nacional, por meio dos modais aéreo e rodoviário. Contamos com parcerias estratégicas nas principais cidades e aeroportos do país, oferecendo soluções logísticas eficientes e personalizadas.</p> 
                         </article>
-                        <img src="/assets/images/resources/logistic-process.png" alt="">
+                        <img src="/assets/images/resources/logistic-process.webp" alt="">
                     </div>
 
                     <div class="coverage-area-map fade-in">
@@ -376,7 +376,7 @@
                         <div class="pin" aria-hidden="true"></div>
                         <div class="pin" aria-hidden="true"></div>
                         <div class="pin" aria-hidden="true"></div>
-                        <img src="/assets/images/resources/brazil-map.png" alt="">
+                        <img src="/assets/images/resources/brazil-map.webp" alt="">
                     </div>
                </div>
             </div>
